# Aitomation

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  TOKEN_BASELINE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: asyncapi.yaml  petstore-mini.json  rickandmorty.openapi.json  schema.sql
scripts/: screenshots.py
src/aitomation/: __init__.py  cli.py  config.py  credentials.py  diff.py  models.py  naming.py  providers.py  telemetry.py  workspace.py
src/aitomation/discover/: __init__.py  asyncapi.py  crawl.py  database.py  openapi.py  registry.py
src/aitomation/scaffold/: __init__.py  generator.py
src/aitomation/scaffold/template/: .env.example.jinja  .gitignore.jinja  Dockerfile.jinja  README.md.jinja  api_client.py.jinja  conftest.py.jinja  copier.yml  pages.py.jinja  pyproject.toml.jinja
src/aitomation/scaffold/template/.github/workflows/: e2e.yml.jinja
src/aitomation/scaffold/template/support/: __init__.py.jinja  reporting.py.jinja
src/aitomation/scaffold/template/tests/: test_smoke.py.jinja
src/aitomation/scaffold/template/{% if has_api %}api{% endif %}/: __init__.py.jinja  client.py.jinja
src/aitomation/scaffold/template/{% if has_browser %}pages{% endif %}/: __init__.py.jinja  base_page.py.jinja
src/aitomation/tui/: __init__.py  app.py  workspace.py
src/aitomation/write/: __init__.py  generator.py
tests/: conftest.py  test_asyncapi.py  test_cli.py  test_config.py  test_crawl.py  test_credentials.py  test_database.py  test_diff.py  test_examples.py  test_models.py  test_openapi.py  test_providers.py  test_registry.py  test_scaffold.py  test_telemetry.py  test_tui.py  test_workspace.py  test_write.py
