[project]
name = "aitomation"
version = "0.1.0"
description = "Discovery Toolkit — compresses the cold-start of test automation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "itzika", email = "17925237+itzika@users.noreply.github.com" }]
keywords = [
    "test-automation",
    "playwright",
    "pytest",
    "openapi",
    "test-discovery",
    "scaffolding",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "copier>=9.15.1",
    # Per-system credential store for the system under test: keyring backs the OS keychain;
    # cryptography backs the encrypted-file fallback for headless Linux/CI (see credentials.py).
    "cryptography>=43.0",
    # httpx and rich are imported directly (discover/* HTTP, CLI+TUI rendering). They also
    # arrive transitively via pydantic-ai/typer/textual, but the imports are first-party, so
    # declare them explicitly rather than relying on another package keeping them as a dep.
    "httpx>=0.27",
    "keyring>=25.0",
    "playwright>=1.60.0",
    "pydantic-ai-slim[anthropic,openai]>=1.104.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=13.7",
    "sqlalchemy>=2.0.50",
    "sqlglot>=30.8.0",
    "textual>=8.2.7",
    "typer>=0.26.4",
]

[project.scripts]
aitomation = "aitomation.cli:main"

[project.urls]
Homepage = "https://github.com/itzika/Aitomation"
Repository = "https://github.com/itzika/Aitomation"
Issues = "https://github.com/itzika/Aitomation/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitomation"]
# Copier template ships inside the package; force-include so dotfiles/.jinja aren't dropped.
artifacts = ["src/aitomation/scaffold/template/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"  # match requires-python floor so UP rules don't suggest 3.13-only syntax
# Never lint generated output or the Copier template (ships .jinja, not valid standalone Python).
extend-exclude = ["src/aitomation/scaffold/template", "projects", "e2e", ".aitomation"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RUF"]
ignore = [
    "E501",   # line length is the formatter's responsibility; don't double-enforce on strings/comments
    "B008",   # Typer Option()/Argument() defaults are the framework's intended DI pattern
    "RUF012", # Textual BINDINGS/CSS-style mutable class attrs are framework idioms, not bugs
    "UP047",  # classic TypeVar style is used deliberately (module T shared by the protocol + helpers)
    "SIM102", # nested guards are kept for parallel readability (web/api/event/data each a top-level if)
]

[tool.ty.environment]
python-version = "3.12"
